add "delete book" functionality
