# server/docs/swagger.yaml
@@ -526,6 +526,40 @@ paths:
       tags:
       - books
   /books/{id}/:
+    delete:
+      consumes:
+      - application/json
+      operationId: DeleteBook
+      parameters:
+      - description: Book ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.Status'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handler.Error'
+        "422":
+          description: Unprocessable Entity
+          schema:
+            $ref: '#/definitions/handler.Error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handler.Error'
+      security:
+      - ApiKeyAuth: []
+      summary: Delete book
+      tags:
+      - books
     get:
       consumes:
       - application/json
@@ -563,7 +597,7 @@ paths:
     put:
       consumes:
       - application/json
-      operationId: UpdateRevision
+      operationId: UpdateBook
       parameters:
       - description: Book ID
         in: path
